# codetour-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.claude/commands/: smart-commit.md
.github/workflows/: lint.yml
.tours/: demo-tour.tour
examples/: README.md  claude-desktop-config.json  create_tour.py  demo.py
examples/.tours/: example-tour.tour
src/codetour_mcp/: __init__.py  core.py  server.py
tests/: conftest.py  test_step_management.py  test_tour_management.py
tests/features/: step_management.feature  tour_management.feature
