[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codetour-mcp"
version = "0.1.0"
description = "MCP server for managing VS Code CodeTour extension files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "puyopop" }
]
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
codetour-mcp = "codetour_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codetour_mcp"]
