[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codetour-mcp"
version = "0.1.0"
description = "MCP server for managing VS Code CodeTour extension files"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "puyopop" }
]
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-bdd>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
]

[project.scripts]
codetour-mcp = "codetour_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codetour_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --doctest-modules"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=8.1.0",
    "ruff>=0.13.2",
]
